--- a/app/src/main/res/drawable/my_gradient_drawable.xml
+++ b/app/src/main/res/drawable/my_gradient_drawable.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="0"
-        android:startColor="#f6ee19"
+        android:startColor="#19F6EF"
         android:endColor="#115ede" />
 </shape>
