--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,14 +43,10 @@
         android:name="com.example.menucontabs.HomeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:defaultNavHost="true">
-
-    </androidx.fragment.app.FragmentContainerView>
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        app:defaultNavHost="true"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-    </androidx.core.widget.NestedScrollView>
+    </androidx.fragment.app.FragmentContainerView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
