--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="176dp"
         android:layout_marginTop="184dp"
         android:text="TextView"
+        android:transitionName="trantext"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,6 +23,7 @@
         android:layout_height="202dp"
         android:layout_marginStart="88dp"
         android:layout_marginBottom="236dp"
+        android:transitionName="tranimage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
