--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways"
             app:titleTextColor="@color/white">
+            <!--Collapse la toolbar-->
         </androidx.appcompat.widget.Toolbar>
 
         <com.google.android.material.tabs.TabLayout
